# bachelor-thesis

./: .gitmodules  README.md  REFERENCES.md  bench_setcpufreq.sh
dualec-cpp/: .gitignore  CMakeLists.txt  tablelookup.cpp  tscfreq.cpp  unused_CMakeLists.txt
dualec-cpp-attack/: CMakeLists.txt  why_no_work.txt
dualec-cpp-attack/src/: attack.cpp
dualec-cpp-attack/src/main/: attack.cpp
dualec-cpp-curve-test/: .gitignore  CMakeLists.txt
dualec-cpp-curve-test/src/: test.cpp
dualec-cpp/src/: bitstr.cpp  dualec.cpp  elliptic_curve.cpp  jacobi_elliptic_curve.cpp
dualec-cpp/src/include/: affine_point.h  bitstr.h  dualec.h  dualec_curve.h  elliptic_curve.h  forward.h  hash.h  jacobi_elliptic_curve.h  jacobi_point.h
dualec-cpp/src/main/: SHA256.cpp  SHA256.h  affine_point.h  bitstr.cpp  bitstr.h  dualec.cpp  dualec.h  dualec_curve.h  elliptic_curve.cpp  elliptic_curve.h  forward.cpp  forward.h  hash.cpp  hash.h  jacobi_elliptic_curve.cpp  jacobi_elliptic_curve.h  jacobi_point.cpp  jacobi_point.h  weierstrass_curve.h
dualec-cpp/src/test/: test.cpp
dualec-cpp/ssl/: ssl_client1.c  ssl_server.c
dualec-impl/: README.md  dualec.sage
dualec-sage/: .gitignore  RESULTS.md  dualec.sage  expected.txt
mbedtls-client/: .gitignore  CMakeLists.txt
mbedtls-client/ssl/: client.cpp  ssl_client1.c
mbedtls-server/: .gitignore  CMakeLists.txt  fix-config.patch  server-cert.pem  server-private-key.pem
mbedtls-server/ssl/: drbg.cpp  server.cpp  ssl_server.c  ssl_server.cpp
scratchpad/: README.md
tls-attack/: .gitignore  CMakeLists.txt  reduced_test.txt  serverout.txt
tls-attack/src/: attack.cpp  bitstr.cpp  input.cpp
tls-attack/src/include/: commons.h  forward.h  input.h
tls-attack/src/main/: SHA256.cpp  attack.cpp  bitstr.h  hash.cpp
writeup/dumpster/: working_backdor_generator.txt
writeup/thesis/: .gitignore  introduction.tex  thesis.tex
writeup/thesis/bibtex/: library.bib
